fixed css alignment

--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,12 @@
-.search-bar {
-  margin: 20px;
-  text-align: center;
+td, th {
+  verticle-align: middle !important;
+  text-align: center !important;
 }
 
-.search-bar input {
-  width: 75%;
+.input-group {
+  margin: 20px 0px;
 }
 
-.video-detail .details {
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.list-group-item {
-  cursor: pointer;
-}
-
-.list-group-item:hover {
-  background-color: #eee;
+svg {
+  height: 150px;
 }
